[package]
name = "sc-rpc-api"
version = "0.10.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate RPC interfaces."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" , registry = "local" }
futures = { version = "0.3.21", registry = "local" }
log = { version = "0.4.17", registry = "local" }
parking_lot = { version = "0.12.1", registry = "local" }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] , registry = "local" }
serde = { version = "1.0.136", features = ["derive"] , registry = "local" }
serde_json = { version = "1.0.85", registry = "local" }
thiserror = { version = "1.0", registry = "local" }
sc-chain-spec = { version = "4.0.0-dev", path = "../chain-spec" , registry = "local" }
sc-transaction-pool-api = { version = "4.0.0-dev", path = "../transaction-pool/api" , registry = "local" }
sp-core = { version = "6.0.0", path = "../../primitives/core" , registry = "local" }
sp-rpc = { version = "6.0.0", path = "../../primitives/rpc" , registry = "local" }
sp-runtime = { version = "6.0.0", path = "../../primitives/runtime" , registry = "local" }
sp-tracing = { version = "5.0.0", path = "../../primitives/tracing" , registry = "local" }
sp-version = { version = "5.0.0", path = "../../primitives/version" , registry = "local" }
jsonrpsee = { version = "0.15.1", features = ["server", "macros"] , registry = "local" }
