[package]
name = "sc-rpc-server"
version = "5.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate RPC servers."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = { version = "0.3.21", registry = "local" }
jsonrpsee = { version = "0.15.1", features = ["server"] , registry = "local" }
log = { version = "0.4.17", registry = "local" }
serde_json = { version = "1.0.85", registry = "local" }
tokio = { version = "1.17.0", features = ["parking_lot"] , registry = "local" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.17.0", path = "../../utils/prometheus" , registry = "local" }
