[package]
name = "sc-rpc-spec-v2"
version = "0.10.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate RPC interface v2."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpsee = { version = "0.15.1", features = ["server", "macros"] , registry = "local" }
# Internal chain structures for "chain_spec".
sc-chain-spec = { version = "4.0.0-dev", path = "../chain-spec" , registry = "local" }
# Pool for submitting extrinsics required by "transaction"
sc-transaction-pool-api = { version = "4.0.0-dev", path = "../transaction-pool/api" , registry = "local" }
sp-core = { version = "6.0.0", path = "../../primitives/core" , registry = "local" }
sp-runtime = { version = "6.0.0", path = "../../primitives/runtime" , registry = "local" }
sp-api = { version = "4.0.0", path = "../../primitives/api" , registry = "local" }
sp-blockchain = { version = "4.0.0-dev", path = "../../primitives/blockchain" , registry = "local" }
codec = { package = "parity-scale-codec", version = "3.0.0" , registry = "local" }
thiserror = { version = "1.0", registry = "local" }
serde = { version = "1.0", registry = "local" }
hex = { version = "0.4", registry = "local" }
futures = { version = "0.3.21", registry = "local" }

[dev-dependencies]
serde_json = { version = "1.0", registry = "local" }
tokio = { version = "1.17.0", features = ["macros"] , registry = "local" }
