[package]
name = "sc-rpc"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate Client RPC"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" , registry = "local" }
futures = { version = "0.3.21", registry = "local" }
hash-db = { version = "0.15.2", default-features = false , registry = "local" }
jsonrpsee = { version = "0.15.1", features = ["server"] , registry = "local" }
lazy_static = { version = "1.4.0", optional = true , registry = "local" }
log = { version = "0.4.17", registry = "local" }
parking_lot = { version = "0.12.1", registry = "local" }
serde_json = { version = "1.0.85", registry = "local" }
sc-block-builder = { version = "0.10.0-dev", path = "../block-builder" , registry = "local" }
sc-chain-spec = { version = "4.0.0-dev", path = "../chain-spec" , registry = "local" }
sc-client-api = { version = "4.0.0-dev", path = "../api" , registry = "local" }
sc-rpc-api = { version = "0.10.0-dev", path = "../rpc-api" , registry = "local" }
sc-tracing = { version = "4.0.0-dev", path = "../tracing" , registry = "local" }
sc-transaction-pool-api = { version = "4.0.0-dev", path = "../transaction-pool/api" , registry = "local" }
sc-utils = { version = "13.0.0", path = "../utils" , registry = "local" }
sp-api = { version = "4.0.0", path = "../../primitives/api" , registry = "local" }
sp-blockchain = { version = "4.0.0", path = "../../primitives/blockchain" , registry = "local" }
sp-core = { version = "6.0.0", path = "../../primitives/core" , registry = "local" }
sp-keystore = { version = "0.12.0", path = "../../primitives/keystore" , registry = "local" }
sp-offchain = { version = "4.0.0", path = "../../primitives/offchain" , registry = "local" }
sp-rpc = { version = "6.0.0", path = "../../primitives/rpc" , registry = "local" }
sp-runtime = { version = "6.0.0", path = "../../primitives/runtime" , registry = "local" }
sp-session = { version = "4.0.0", path = "../../primitives/session" , registry = "local" }
sp-version = { version = "5.0.0", path = "../../primitives/version" , registry = "local" }

tokio = { version = "1.17.0", optional = true , registry = "local" }

[dev-dependencies]
env_logger = { version = "0.9", registry = "local" }
assert_matches = { version = "1.3.0", registry = "local" }
lazy_static = { version = "1.4.0", registry = "local" }
sc-block-builder = { version = "0.10.0-dev", path = "../block-builder" , registry = "local" }
sc-network = { version = "0.10.0-dev", path = "../network" , registry = "local" }
sc-network-common = { version = "0.10.0-dev", path = "../network/common" , registry = "local" }
sc-transaction-pool = { version = "4.0.0-dev", path = "../transaction-pool" , registry = "local" }
sp-consensus = { version = "0.10.0", path = "../../primitives/consensus/common" , registry = "local" }
tokio = { version = "1.17.0", registry = "local" }
sp-io = { version = "6.0.0", path = "../../primitives/io" , registry = "local" }
substrate-test-runtime-client = { version = "2.0.0", path = "../../test-utils/runtime/client" , registry = "local" }

[features]
test-helpers = ["lazy_static", "tokio"]
