[package]
name = "sc-state-db"
version = "0.10.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "State database maintenance. Handles canonicalization and pruning in the database."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] , registry = "local" }
log = { version = "0.4.17", registry = "local" }
parity-util-mem = { version = "0.12.0", default-features = false, features = ["primitive-types"] , registry = "local" }
parity-util-mem-derive = { version = "0.1.0", registry = "local" }
parking_lot = { version = "0.12.1", registry = "local" }
sc-client-api = { version = "4.0.0-dev", path = "../api" , registry = "local" }
sp-core = { version = "6.0.0", path = "../../primitives/core" , registry = "local" }
