[package]
name = "sc-sync-state-rpc"
version = "0.10.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "A RPC handler to create sync states for light clients."
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" , registry = "local" }
jsonrpsee = { version = "0.15.1", features = ["server", "macros"] , registry = "local" }
serde = { version = "1.0.136", features = ["derive"] , registry = "local" }
serde_json = { version = "1.0.85", registry = "local" }
thiserror = { version = "1.0.30", registry = "local" }
sc-chain-spec = { version = "4.0.0-dev", path = "../chain-spec" , registry = "local" }
sc-client-api = { version = "4.0.0-dev", path = "../api" , registry = "local" }
sc-consensus-babe = { version = "0.10.0-dev", path = "../consensus/babe" , registry = "local" }
sc-consensus-epochs = { version = "0.10.0-dev", path = "../consensus/epochs" , registry = "local" }
sc-finality-grandpa = { version = "0.10.0-dev", path = "../finality-grandpa" , registry = "local" }
sp-blockchain = { version = "4.0.0", path = "../../primitives/blockchain" , registry = "local" }
sp-runtime = { version = "6.0.0", path = "../../primitives/runtime" , registry = "local" }
