[package]
name = "sc-sysinfo"
version = "6.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "A crate that provides basic hardware and software telemetry information."
documentation = "https://docs.rs/sc-sysinfo"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = { version = "0.3.19", registry = "local" }
libc = { version = "0.2", registry = "local" }
log = { version = "0.4.17", registry = "local" }
rand = { version = "0.7.3", registry = "local" }
rand_pcg = { version = "0.2.1", registry = "local" }
regex = { version = "1", registry = "local" }
serde = { version = "1.0.136", features = ["derive"] , registry = "local" }
serde_json = { version = "1.0.85", registry = "local" }
sc-telemetry = { version = "8.0.0", path = "../telemetry" , registry = "local" }
sp-core = { version = "6.0.0", path = "../../primitives/core" , registry = "local" }
sp-io = { version = "6.0.0", path = "../../primitives/io" , registry = "local" }
sp-std = { version = "7.0.0", path = "../../primitives/std" , registry = "local" }

[dev-dependencies]
sp-runtime = { version = "6.0.0", path = "../../primitives/runtime" , registry = "local" }
