[package]
name = "sc-telemetry"
version = "8.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Telemetry utils"
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
documentation = "https://docs.rs/sc-telemetry"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
chrono = { version = "0.4.19", registry = "local" }
futures = { version = "0.3.21", registry = "local" }
libp2p = { version = "0.49.0", default-features = false, features = ["dns-async-std", "tcp-async-io", "wasm-ext", "websocket"] , registry = "local" }
log = { version = "0.4.17", registry = "local" }
parking_lot = { version = "0.12.1", registry = "local" }
pin-project = { version = "1.0.12", registry = "local" }
rand = { version = "0.7.2", registry = "local" }
serde = { version = "1.0.136", features = ["derive"] , registry = "local" }
serde_json = { version = "1.0.85", registry = "local" }
thiserror = { version = "1.0.30", registry = "local" }
wasm-timer = { version = "0.2.5", registry = "local" }
