[package]
name = "sc-transaction-pool"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate transaction pool implementation."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = { version = "0.1.57", registry = "local" }
codec = { package = "parity-scale-codec", version = "3.0.0" , registry = "local" }
futures = { version = "0.3.21", registry = "local" }
futures-timer = { version = "3.0.2", registry = "local" }
linked-hash-map = { version = "0.5.4", registry = "local" }
log = { version = "0.4.17", registry = "local" }
parity-util-mem = { version = "0.12.0", default-features = false, features = ["primitive-types"] , registry = "local" }
parking_lot = { version = "0.12.1", registry = "local" }
serde = { version = "1.0.136", features = ["derive"] , registry = "local" }
thiserror = { version = "1.0.30", registry = "local" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.16.0", path = "../../utils/prometheus" , registry = "local" }
sc-client-api = { version = "4.0.0-dev", path = "../api" , registry = "local" }
sc-transaction-pool-api = { version = "4.0.0-dev", path = "./api" , registry = "local" }
sc-utils = { version = "10.0.0", path = "../utils" , registry = "local" }
sp-api = { version = "4.0.0-dev", path = "../../primitives/api" , registry = "local" }
sp-blockchain = { version = "4.0.0-dev", path = "../../primitives/blockchain" , registry = "local" }
sp-core = { version = "6.0.0", path = "../../primitives/core" , registry = "local" }
sp-runtime = { version = "6.0.0", path = "../../primitives/runtime" , registry = "local" }
sp-tracing = { version = "5.0.0", path = "../../primitives/tracing" , registry = "local" }
sp-transaction-pool = { version = "4.0.0-dev", path = "../../primitives/transaction-pool" , registry = "local" }

[dev-dependencies]
array-bytes = { version = "4.1", registry = "local" }
assert_matches = { version = "1.3.0", registry = "local" }
criterion = { version = "0.3", registry = "local" }
sc-block-builder = { version = "0.10.0-dev", path = "../block-builder" , registry = "local" }
sp-consensus = { version = "0.10.0-dev", path = "../../primitives/consensus/common" , registry = "local" }
substrate-test-runtime = { version = "2.0.0", path = "../../test-utils/runtime" , registry = "local" }
substrate-test-runtime-client = { version = "2.0.0", path = "../../test-utils/runtime/client" , registry = "local" }
substrate-test-runtime-transaction-pool = { version = "2.0.0", path = "../../test-utils/runtime/transaction-pool" , registry = "local" }

[[bench]]
name = "basics"
harness = false
