[package]
name = "sc-utils"
version = "12.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "I/O for Substrate runtimes"
readme = "README.md"

[dependencies]
futures = { version = "0.3.21", registry = "local" }
futures-timer = { version = "3.0.2", registry = "local" }
lazy_static = { version = "1.4.0", registry = "local" }
log = { version = "0.4", registry = "local" }
parking_lot = { version = "0.12.1", registry = "local" }
prometheus = { version = "0.13.0", default-features = false , registry = "local" }

[features]
default = ["metered"]
metered = []

[dev-dependencies]
tokio-test = { version = "0.4.2", registry = "local" }
